# NRP_PushBot_experiments

./: README.md
pushbot_exp_0/: ExDPushbotExp.uis  bibi_configuration.bibi  experiment_configuration.exc  narrow_events_view.py  turn_around.py
pushbot_exp_0/pushbot/: model.sdf
pushbot_exp_0_0/: ExDPushbotExp.ini  ExDPushbotExp.uis  empty_world.sdf  experiment_configuration.exc
pushbot_exp_0_0/pushbot/: model.sdf
pushbot_exp_0_1/: ExDPushbotExp.ini  ExDPushbotExp.uis  empty_world.sdf  experiment_configuration.exc  turn_around.py
pushbot_exp_0_1_0/: ExDPushbotExp.ini  ExDPushbotExp.uis  bibi_configuration.bibi  experiment_configuration.exc  landmark_world.sdf  pushbot_brain.py
pushbot_exp_0_1_1/: ExDPushbotExp.uis  bibi_configuration.bibi  experiment_configuration.exc  pushbot_brain.py  pushbot_turn_stimulus.py  pushbot_wheel_control.py
pushbot_model/: CMakeLists.txt  README.md  model.config  model.sdf  package.xml
